# tauri-iptv-player

./: .gitignore  BUILD_GUIDE.md  BUILD_INTEL.md  CCTV.m3u  CNTV.m3u  INSTALL_MACOS.md  LOGGING.md  OPTIMIZATION.md  PLATFORM_SUPPORT.md  README.md  README_LOGGING.md  RELEASE.md  RELEASE_GUIDE.md  a.m3u  a.m3u8  check-build.sh  package-lock.json  package.json  quick-build.sh  release.sh  test-logging.sh  修复总结_v2.md  日志系统更新说明.md
.github/workflows/: build-release.yml
public/: test-playlist.m3u
src/: AddSourceStyles.css  App.css  App.css.backup  App.tsx  CollapseStyles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AddSource.tsx  ChannelList.tsx  SourceList.tsx  VideoPlayer.tsx
